@startuml

title __ADMIN's Class Diagram__\n

  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.AddCourseUI {
          + addCourse()
      }
    }
  }
  

  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.AddIndexUI {
          + addIndex()
      }
    }
  }
  

  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.AddStudentUI {
          + addStudent()
      }
    }
  }
  

  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.CheckVacancyUI {
          + checkVacancy()
      }
    }
  }
  

  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.EditCourseInformationUI {
          + editCourseInformation()
      }
    }
  }
  

  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.EditStudentAccessUI {
          + editStudentAccess()
      }
    }
  }
  

  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.PrintStudentListByCourseUI {
          + printStudentListByCourse()
      }
    }
  }



  namespace stars.boundary {
    namespace admin {
      class stars.boundary.admin.PrintStudentListByIndexUI {
          + printStudentListByIndex()
      }
    }
  }
  

  stars.boundary.admin.AddCourseUI -up-|> stars.boundary.SelectUI
  stars.boundary.admin.CheckVacancyUI -up-|> stars.boundary.SelectUI
  stars.boundary.admin.EditCourseInformationUI -up-|> stars.boundary.SelectUI
  stars.boundary.admin.EditStudentAccessUI -up-|> stars.boundary.SelectUI
  stars.boundary.admin.PrintStudentListByCourseUI -up-|> stars.boundary.SelectUI
  stars.boundary.admin.PrintStudentListByIndexUI -up-|> stars.boundary.SelectUI


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
